--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     height: 250px;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
 }
 .flex-item {
