--- a/flag/style.css
+++ b/flag/style.css
@@ -1,18 +1,21 @@
-.container {
-    background-color: teal;
-    width: 250px;
-    height: 250px;
+body {
+    background-color: gray;
     display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: flex-end;
-}
-.flex-item {
-    background-color: hotpink;
-    height: 30px;
-    width: 30px;
+    justify-content: center;
+    align-items: center;
 }
 
-#2 {
-    align-self: flex-start;
+.container {
+    background-color: white;
+    width: 700px;
+    height: 500px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.flex-item {
+    background-color: red;
+    height: 250px;
+    width: 250px;
+    border-radius: 50%;
 }
