--- a/easymenu/style.css
+++ b/easymenu/style.css
@@ -1,25 +1,27 @@
-body {
+/*body {
     display: flex;
     justify-content: center;
-    align-items: center;
     height: 100vh;
-}
+    margin-top: 50px;
+}*/
 
 .container {
     background-color: gray;
     width: 800px;
     height: 50px;
     display: flex;
-    justify-content: space-around;
-    align-items: center;
 }
 .menu{
     background-color: gray;
     color: black;
     text-decoration: none;
-
+    flex:1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .container .menu:hover{
     background-color: #333;
+    color: #888 ;
 }
