--- a/mediummenu/style.css
+++ b/mediummenu/style.css
@@ -1,15 +1,15 @@
 
 .container {
-    background-color: #999;
+    background-color: #f2f2f2;
     width: 800px;
     height: 50px;
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
     align-items: center;
 }
 img {
-    height: 50%;
-    justify-self: flex-start;
+    height: 30px;
+
 }
 
 a {
@@ -19,6 +19,9 @@ a {
 }
 
  a:hover{
-    background-color: #333;
     color: #888 ;
+}
+
+.menu {
+    display: flex;
 }
