--- a/hardmenu/style.css
+++ b/hardmenu/style.css
@@ -32,4 +32,9 @@ a {
     border-radius: 5px ;
     margin-right: 15px; 
     padding: 5px 15px;
+    cursor: pointer;
+}
+.loginbutton:hover{
+    background-color: #999;
+    color: #444;
 }
