--- a/fibonacci flexbox/style.css
+++ b/fibonacci flexbox/style.css
@@ -1,9 +1,7 @@
 
 body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 20px;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     height: 100vh;
@@ -12,29 +10,25 @@ body {
 
 .container {
     display: flex;
-    flex-wrap: wrap;
-    gap: 10px;
-    width: 80%;
-    max-width: 1200px;
+    width: 100%;
+    height: 70px;
 }
-
-.item {
-    flex-grow: 1;
-    flex-basis: 0;
-    background-color: #007BFF;
-    color: #fff;
+.reverse-container{
     display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100px;
-    font-size: 1.5em;
-    border-radius: 5px;
+    width: 100%;
+    height: 70px;
+    flex-direction: row-reverse;
 }
 
-.item-1 { flex-grow: 1; }
+.item-1 { flex-grow: 0; }
 .item-2 { flex-grow: 1; }
-.item-3 { flex-grow: 2; }
-.item-4 { flex-grow: 3; }
-.item-5 { flex-grow: 5; }
-.item-6 { flex-grow: 8; }
+.item-3 { flex-grow: 1; }
+.item-4 { flex-grow: 2; }
+.item-5 { flex-grow: 3; }
+.item-6 { flex-grow: 5; }
+.item-7 { flex-grow: 8; }
+.item-8 { flex-grow: 13; }
+.item-9 { flex-grow: 21; }
+.item-10 { flex-grow: 34; }
+
 
