--- a/fibonacci flexbox/style.css
+++ b/fibonacci flexbox/style.css
@@ -10,25 +10,33 @@ body {
 
 .container {
     display: flex;
+    max-width: 1000px;
     width: 100%;
     height: 70px;
+    margin: 20px;
 }
 .reverse-container{
     display: flex;
+    max-width: 1000px;
     width: 100%;
     height: 70px;
+    margin: 20px;
     flex-direction: row-reverse;
 }
 
-.item-1 { flex-grow: 0; }
-.item-2 { flex-grow: 1; }
-.item-3 { flex-grow: 1; }
-.item-4 { flex-grow: 2; }
-.item-5 { flex-grow: 3; }
-.item-6 { flex-grow: 5; }
-.item-7 { flex-grow: 8; }
-.item-8 { flex-grow: 13; }
-.item-9 { flex-grow: 21; }
-.item-10 { flex-grow: 34; }
+section{
+    padding: 5px;
+}
+
+.item-1 { background:rgba(100,0,0,1); flex-grow: 0; }
+.item-2 { background:rgba(100,20,0,1); flex-grow: 1; }
+.item-3 { background:rgba(100,40,0,1); flex-grow: 1; }
+.item-4 { background:rgba(100,60,0,1); flex-grow: 2; }
+.item-5 { background:rgba(100,80,0,1); flex-grow: 3; }
+.item-6 { background:rgba(100,100,0,1); flex-grow: 5; }
+.item-7 { background:rgba(100,120,0,1); flex-grow: 8; }
+.item-8 { background:rgba(100,140,0,1); flex-grow: 13; }
+.item-9 { background:rgba(100,160,0,1); flex-grow: 21; }
+.item-10 { background:rgba(100,180,0,1); flex-grow: 34; }
 
 
