--- a/card with pager/style.css
+++ b/card with pager/style.css
@@ -27,4 +27,25 @@ body {
     text-align: center;
     font-weight: bold;
     margin:0  20px 20px 20px;
+    margin-top: auto;
+}
+
+footer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: auto ;
+}
+
+a {
+    width: 10px;
+    height: 10px;
+    background-color: #f4f4f4;
+    border-radius: 50%;
+    text-decoration: none;
+    margin: 7px;
+
+}
+a.active {
+    background-color: #666;
 }
