--- a/profile card/style.css
+++ b/profile card/style.css
@@ -23,21 +23,33 @@ body {
 }
 .container .closeicon{
     color: #f4f4f4;
-    width: 10px;
+    width: 15px;
 
 }
 .container .profilephoto{
     width: 50%;
     border-radius: 50%;
 }
+h1{
+    color: rgba(0,0,0,.8);
+}
+
+p{
+    margin: 0;
+    font-weight: bold;
+}
 
 a {
-    width: 10px;
-    height: 10px;
-    background-color: #f4f4f4;
-    border-radius: 50%;
+    width: 70%;
+    background-color: rgba(0,0,0,.8);
+    color: #eee;
     text-decoration: none;
-    margin: 7px;
+    padding: 20px;
+    border-radius:40px;
+    text-align: center;
 
+}
+a:hover {
+    background-color: rgba(0,0,0,1);;
 }
 
