--- a/profile card/style.css
+++ b/profile card/style.css
@@ -21,9 +21,11 @@ body {
     box-shadow: 0 0 2rem rgba(0,0,0,.1);
     color: rgba(59, 28, 28, 0.4);
 }
+
 .container .closeicon{
-    color: #f4f4f4;
+    opacity: 0.5; /* to set the transparency level for an element.*/
     width: 15px;
+    margin: 1rem 1rem auto auto;
 
 }
 .container .profilephoto{
@@ -32,6 +34,8 @@ body {
 }
 h1{
     color: rgba(0,0,0,.8);
+    margin-bottom: 2px;
+    margin-top: 3px;
 }
 
 p{
@@ -44,9 +48,10 @@ a {
     background-color: rgba(0,0,0,.8);
     color: #eee;
     text-decoration: none;
-    padding: 20px;
+    padding: 15px;
     border-radius:40px;
     text-align: center;
+    margin: auto .5rem 1.5rem .5rem;
 
 }
 a:hover {
