--- a/playing card/style.css
+++ b/playing card/style.css
@@ -12,14 +12,28 @@ body {
 .container {
     width: 280px;
     height: 400px;
-    background-color: white;
+    background-color: #f7f7f7;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 5px;
+    box-shadow: 0 0 2rem rgba(0,0,0,.1);
+    color: rgb(206, 56, 56);
+    font-size: 70px;
+    border: 10px solid white;
+}
+.container aside{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    border-radius: 5px;
-    box-shadow: 0 0 2rem rgba(0,0,0,.1);
-    color: rgba(59, 28, 28, 0.4);
+    font-size: 30px;
+    margin: 10px;
+}
+
+span {
+    color: #666;
 }
 
 .container .top{
@@ -27,6 +41,7 @@ body {
 }
 .container .bottom{
     align-self: flex-end;
+    transform: rotate(180deg);
 }
 
 
