--- a/product landscape/style.css
+++ b/product landscape/style.css
@@ -22,11 +22,13 @@ body {
 }
 
 .product-image{
+    flex: 1;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     background-color:  rgb(255, 208, 0) ;
+    
 }
 
 .container .product-image img{
@@ -39,20 +41,23 @@ body {
     color: rgba(0,0,0,.8);
     font-size: 22px;
     font-weight: bold;
-    margin: 10px;
+    margin-right: 10px;
+    margin-bottom: 20px
 }
 
 .product-info{
+    flex: 1;
     margin: 10px 25px;
     display: flex;
     flex-direction: column;
-
+    
 }
 
 h1{
     font-weight: bold;
     font-size: 22px;
     margin-bottom: 0;
+    margin-top: 0;
 }
 
 h2{
@@ -61,6 +66,19 @@ h2{
 }
 
 p{
+    margin-top: 0;
+    margin-bottom: 55px;
     color: rgba(0,0,0,.7);
 }
 
+button {
+    font-size: 18px;
+    color: black;
+    appearance: none;
+    border: none;
+    border: 2px solid black;
+    background: none;
+    padding: 12px 18px;
+    margin-left: auto;
+    margin-bottom: 0;
+}
